Try using auto for height in the track-credits icons to stop stretching

--- a/greenfield/app/assets/stylesheets/greenfield/mobile.css.scss
+++ b/greenfield/app/assets/stylesheets/greenfield/mobile.css.scss
@@ -124,8 +124,8 @@
             tr {
               th {
                 img {
-                  width: 30px;
-                  height: 30px;
+                  // width: 30px;
+                  // height: 30px;
                 }
               }
             }
