--- a/greenfield/app/assets/stylesheets/greenfield/post.css.scss
+++ b/greenfield/app/assets/stylesheets/greenfield/post.css.scss
@@ -20,7 +20,7 @@
               opacity: .4;
               filter: alpha(opacity=40);
               width: 50%;
-              height: 50%;
+              height: auto;
             }
           }
         }
